src/test/deca/context/valid/cast_cont_03.deca
// Description:
//    test Cast 3
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

{
   int x = 1;
   float y = (float) (x);
}
