src/test/deca/context/invalid/objet/this_main.deca
// Description:
//    this dans le main.
//
// Resultats:
//      Error
//
// Historique:
//    cree le 01/01/2023

{
    int x = 3;
    this.x;
}
